[gd_scene load_steps=1 format=3]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 0.0
max_value = 100.0
value = 100.0
size_flags_horizontal = 3

[node name="WeaponLabel" type="Label" parent="MarginContainer/VBoxContainer"]
text = "Weapon"

[node name="CooldownBar" type="TextureProgressBar" parent="MarginContainer/VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 0.0
value = 1.0
size_flags_horizontal = 3

[node name="Crosshair" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
position = Vector2(0, 0)
text = "+"
horizontal_alignment = 1
vertical_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 0.9)
theme_override_font_sizes/font_size = 28

[node name="DamageFlash" type="ColorRect" parent="."]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
color = Color(1, 0, 0, 0.0)
mouse_filter = 2

[node name="Status" type="CenterContainer" parent="."]
visible = false
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0

[node name="Panel" type="Panel" parent="Status"]
custom_minimum_size = Vector2(320, 140)

[node name="VBoxContainer" type="VBoxContainer" parent="Status/Panel"]
anchors_preset = 15
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="StatusLabel" type="Label" parent="Status/Panel/VBoxContainer"]
text = "Статус"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="Status/Panel/VBoxContainer"]
text = "Переиграть"

